fix: spacings above footer

--- a/src/assets/styles/AboutUsPage.sass
+++ b/src/assets/styles/AboutUsPage.sass
@@ -14,6 +14,7 @@
     background-position: center
     padding: 20px 0
     flex-grow: 1
+    margin-bottom: 10px
 
 .about-img
   width: 100%
