--- a/src/assets/styles/ContactPage.sass
+++ b/src/assets/styles/ContactPage.sass
@@ -61,6 +61,7 @@
     gap: 24px
     @include plus1025()
         margin-top: 40px
+        margin-bottom: 50px
 
 .input-container
     width: 100%
